--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "body-parser": "^1.17.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "pg-promise": "^6.2.1"
+    "node-pg-migrate": "^2.7.0",
+    "pg-promise": "^6.2.1",
+    "pg": "^7.2.0"
   },
   "devDependencies": {
     "eslint": "^4.5.0",
