--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node src/server.js",
     "start:dev": "nodemon src/server.js",
     "db:init": "dropdb contacts_development && createdb contacts_development && npm run db:migrate",
-		"db:create:migration": "pg-migrate create",
+		"db:migration:create": "pg-migrate create",
 		"db:migrate": "pg-migrate up 1",
     "load_schema": "psql -d contacts_development < src/db/schema/schema.sql",
     "load_contacts": "psql -d contacts_development < test/seed/contacts.sql",
